Server: create user Refs: #26
