# network/server/src/main/kotlin/com/motorro/network/server/Application.kt
@@ -1,9 +1,9 @@
 package com.motorro.network.server
 
+import com.motorro.network.data.Profile
 import io.ktor.http.HttpStatusCode
 import io.ktor.serialization.kotlinx.json.json
 import io.ktor.server.application.Application
-import io.ktor.server.application.call
 import io.ktor.server.application.install
 import io.ktor.server.engine.embeddedServer
 import io.ktor.server.netty.Netty
@@ -11,8 +11,10 @@ import io.ktor.server.plugins.NotFoundException
 import io.ktor.server.plugins.contentnegotiation.ContentNegotiation
 import io.ktor.server.plugins.openapi.openAPI
 import io.ktor.server.plugins.statuspages.StatusPages
+import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.routing.get
+import io.ktor.server.routing.post
 import io.ktor.server.routing.routing
 import kotlinx.serialization.json.Json
 
@@ -60,6 +62,10 @@ fun Application.module(users: Users) {
 
         get("/users") {
             call.respond(users.getUsers())
+        }
+
+        post("/users") {
+            call.respond(users.addUser(call.receive<Profile>()))
         }
 
         get("/profiles/{id}") {
